2008-12-08  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_bspline.h: preserve binary compatibility in workspaces

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2006-11-02  Brian Gough  <bjg@network-theory.co.uk>

	* added test program 

	* initial checkin from P.Alken
	
